--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
     <nav>
  	<img class="round-img profile-img" src="img/profile.jpg">
  		<ul>
- 			<li> <a href="index.html">About</a></li>
+ 			<li> <a href="index.html">Aboutkkkkkkkk</a></li>
  			<li><a href="work.html">Work</a></li>
  			<li><a href="contact.html">Contact</a></li>
             <li><a href="Network.htm">Network</a></li>
