modified network link

--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
  			<li> <a href="index.html">Aboutkkkkkkkk</a></li>
  			<li><a href="work.html">Work</a></li>
  			<li><a href="contact.html">Contact</a></li>
-            <li><a href="Network.htm">Network</a></li>
+            <li><a href="Network.htm">Hello</a></li>
 
  			</li>
  		</ul>
